feature(ITPL-15498): add yarn, update engines and travis

--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
   "scripts": {
     "test": "./node_modules/.bin/mocha test --reporter spec"
   },
+  "engines": {
+    "node": ">=10",
+    "yarn": ">=1.21"
+  },
   "repository": {
     "type": "git",
     "url": "git://github.com/nherment/node-object-tree.git"
