--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "object-tree",
-  "version": "0.2.5",
+  "version": "1.0.0-isight",
   "description": "lookup js objects values from a flat structure",
   "main": "index.js",
   "scripts": {
